<resources>
    <string name="app_name">Liquigas</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_buy">Comprar Gás</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="user_logged">userLogged</string>
    <string name="default_user">usuário</string>

    <string name="home_button">Peça aqui</string>
    <string name="order_item_title">Botijão 13kg - 2 Unidades</string>
    <string name="order_date">20/05/2022</string>
    <string name="payment_type_item">Pagamento: Cartão de crédito</string>

    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="enter">Entrar</string>
    Pedidos
    <string name="item_quantity">Informe a Quantidade</string>
    <string name="go_to_payment">Ir para pagamento</string>
    <string name="order_payment_type">Tipo de pagamento:</string>
    <string name="order_date_label">Data do pedido: </string>
    <string name="order_products">Produto(s):</string>
    <string name="payment_type">Tipo de pagamento</string>
    <string name="money">Dinheiro</string>
    <string name="credit_card">Cartão de crédito</string>
    <string name="pix">Pix</string>
    <string name="finish_order">Finalizar Pedido</string>

    <string name="orders">Pedidos</string>
    <string name="information_title">Sobre</string>
    <string name="choose_your_gas_canister">Escolha seu botijão</string>
    <string name="payment">Pagamento</string>

    <string name="information">A maior empresa de distribuição de gás de Porto Alegre, e os melhores serviços, produtos e preços na palma da sua mão. \n\nNossa empresa se destaca pelo ótimo atendimento, inovação e agilidade, além de possuir uma equipe altamente qualificada e uma frota própria padronizada. \n\nHoje, a Liquigás subsidiária da Petrobrás, é lider no mercado de botijões de gás de até 13kg e uma das maiores distribuidoras de Gás Liquefeito de Petróleo do Brasil. \n\nVenha você também fazer parte desta grande empresa.</string>
</resources>