<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/order_products"/>
        <TextView
            android:id="@+id/orderItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/order_item_title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/order_payment_type"/>

            <TextView
                android:id="@+id/orderItemPaymentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_type_item"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/order_date_label"/>

            <TextView
                android:id="@+id/orderItemDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_date"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>